wip: for CVE evaluation