@@ -4,18 +4,18 @@ import java.io.Serializable;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import javax.persistence.CascadeType;
-import javax.persistence.Column;
-import javax.persistence.Entity;
-import javax.persistence.EnumType;
-import javax.persistence.Enumerated;
-import javax.persistence.FetchType;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
-import javax.persistence.Id;
-import javax.persistence.ManyToOne;
-import javax.persistence.OneToMany;
-import javax.persistence.Table;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.Table;
 
 import fr.insee.pearljam.api.domain.SurveyUnit;
 import fr.insee.pearljam.api.dto.communication.CommunicationRequestDto;
@@ -62,7 +62,8 @@ public class CommunicationRequest implements Serializable {
         this.medium = dto.getMedium();
         this.emiter = dto.getEmiter();
         this.reason = dto.getReason();
-        this.status = dto.getStatus().stream().map(statusDto -> new CommunicationRequestStatus(statusDto,this)).collect(Collectors.toList());
+        this.status = dto.getStatus().stream().map(statusDto -> new CommunicationRequestStatus(statusDto, this))
+                .toList();
         this.surveyUnit = surveyUnit;
     }
 
